# quictorrent

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  claude.yml
crates/bitturbulence-client/: Cargo.toml
crates/bitturbulence-client/src/: cli.rs  commands.rs  config.rs  daemon.rs  ipc_proto.rs  main.rs  state.rs
crates/bitturbulence-client/src/commands/: create.rs  flow.rs  format.rs  ipc_client.rs  mod.rs  serve.rs
crates/bitturbulence-client/src/daemon/: accept.rs  context.rs  dht.rs  drainer.rs  filler.rs  ipc.rs  mod.rs  peer.rs  scheduler_actor.rs  state_loop.rs  stream.rs  tracker.rs
crates/bitturbulence-client/src/daemon/scheduler_actor/: mod.rs  pick.rs
crates/bitturbulence-client/src/daemon/stream/: mod.rs  serve.rs  types.rs  worker.rs
crates/bitturbulence-dht/: Cargo.toml
crates/bitturbulence-dht/src/: bucket.rs  error.rs  handle.rs  lib.rs  message.rs  node.rs  node_id.rs  store.rs  table.rs
crates/bitturbulence-peer/: Cargo.toml
crates/bitturbulence-peer/src/: error.rs  lib.rs  session.rs  state.rs
crates/bitturbulence-peer/tests/: integration.rs
crates/bitturbulence-pieces/: Cargo.toml
crates/bitturbulence-pieces/src/: error.rs  have_persist.rs  lib.rs  picker.rs  scheduler.rs  store.rs  torrent_store.rs  verify.rs
crates/bitturbulence-pieces/src/scheduler/: blocks.rs  mod.rs  pick.rs  tests.rs  types.rs
crates/bitturbulence-protocol/: Cargo.toml
crates/bitturbulence-protocol/src/: auth.rs  error.rs  info_hash.rs  lib.rs  metainfo.rs  priority.rs
crates/bitturbulence-protocol/src/wire/: codec.rs  message.rs  mod.rs
crates/bitturbulence-tracker/: Cargo.toml
crates/bitturbulence-tracker/src/: client.rs  error.rs  lib.rs  server.rs  store.rs  types.rs
crates/bitturbulence-transport/: Cargo.toml
crates/bitturbulence-transport/src/: config.rs  connection.rs  endpoint.rs  error.rs
crates/bitturbulence-transport/tests/: integration.rs
crates/qt-client/: Cargo.toml
crates/qt-client/src/: cli.rs  commands.rs  config.rs  daemon.rs  main.rs  state.rs
crates/qt-dht/: Cargo.toml
crates/qt-dht/src/: bucket.rs  error.rs  lib.rs  message.rs  node.rs  node_id.rs  store.rs  table.rs
crates/qt-peer/: Cargo.toml
crates/qt-peer/src/: error.rs  lib.rs  session.rs  state.rs
crates/qt-peer/tests/: integration.rs
crates/qt-pieces/: Cargo.toml
crates/qt-pieces/src/: lib.rs  scheduler.rs  store.rs  verify.rs
crates/qt-protocol/: Cargo.toml
crates/qt-protocol/src/: error.rs  info_hash.rs  lib.rs  metainfo.rs  priority.rs
crates/qt-protocol/src/wire/: codec.rs  message.rs  mod.rs
crates/qt-tracker/: Cargo.toml
crates/qt-tracker/src/: client.rs  error.rs  lib.rs  server.rs  store.rs  types.rs
crates/qt-transport/: Cargo.toml
crates/qt-transport/src/: config.rs  connection.rs  endpoint.rs  error.rs  lib.rs
crates/qt-transport/tests/: integration.rs
docs/: architecture.md  issues.md
integration/: Cargo.toml
integration/tests/: current.rs  end_to_end.rs  swarm.rs
