[workspace]
members = [
    "crates/bitturbulence-protocol",
    "crates/bitturbulence-transport",
    "crates/bitturbulence-peer",
    "crates/bitturbulence-pieces",
    "crates/bitturbulence-tracker",
    "crates/bitturbulence-dht",
    "crates/bitturbulence-client",
    "integration",
]
resolver = "2"

[workspace.dependencies]
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
bytes = "1"
thiserror = "1"
tracing = "0.1"
