[package]
name = "qt-integration"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
bitturbulence-protocol  = { path = "../crates/bitturbulence-protocol" }
bitturbulence-transport = { path = "../crates/bitturbulence-transport" }
bitturbulence-peer      = { path = "../crates/bitturbulence-peer" }
bitturbulence-pieces    = { path = "../crates/bitturbulence-pieces" }
tokio        = { version = "1", features = ["full"] }
bytes        = "1"
sha2         = "0.10"
tempfile     = "3"
futures-util = { version = "0.3", features = ["sink"] }
tokio-util        = { version = "0.7", features = ["codec"] }
quinn             = "0.11"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
