[package]
name = "bitturbulence-dht"
version = "0.1.0"
edition = "2021"

[dependencies]
bitturbulence-protocol  = { path = "../bitturbulence-protocol" }
bitturbulence-transport = { path = "../bitturbulence-transport" }
tokio        = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha2         = "0.10"
rand         = "0.8"
hex          = "0.4"

[dev-dependencies]
tempfile = "3"
