[package]
name = "bitturbulence-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
bitturbulence-protocol  = { path = "../bitturbulence-protocol" }
bitturbulence-transport = { path = "../bitturbulence-transport" }
quinn        = { workspace = true }
tokio        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha2         = "0.10"
hex          = "0.4"

# Persistencia
rusqlite     = { version = "0.31", features = ["bundled"] }

# Tiempo
chrono       = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile     = "3"
tokio        = { version = "1", features = ["full"] }
