[package]
name = "bitturbulence-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn       = { workspace = true }
tokio       = { workspace = true }
bytes       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio-util  = { version = "0.7", features = ["codec"] }
futures-util = { version = "0.3", features = ["sink"] }
rcgen       = "0.13"
rustls      = { version = "0.23", default-features = false, features = ["ring"] }
bitturbulence-protocol = { path = "../bitturbulence-protocol" }
