[package]
name = "qt-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qt"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "download"
path = "src/bin/download.rs"

[dependencies]
qt-protocol  = { path = "../qt-protocol" }
qt-transport = { path = "../qt-transport" }
qt-peer      = { path = "../qt-peer" }
qt-pieces    = { path = "../qt-pieces" }
qt-tracker   = { path = "../qt-tracker" }
qt-dht       = { path = "../qt-dht" }
tokio        = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
hex          = "0.4"
bytes        = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
tokio-util   = { version = "0.7", features = ["codec"] }
dirs-next    = "2"
