[package]
name = "qt-dht"
version = "0.1.0"
edition = "2021"

[dependencies]
qt-protocol  = { path = "../qt-protocol" }
qt-transport = { path = "../qt-transport" }
tokio        = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha2         = "0.10"
rand         = "0.8"
hex          = "0.4"

[dev-dependencies]
tempfile = "3"
