[package]
name = "qt-peer"
version = "0.1.0"
edition = "2021"

[dependencies]
qt-protocol  = { path = "../qt-protocol" }
qt-transport = { path = "../qt-transport" }
tokio        = { workspace = true }
bytes        = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
futures-util = { version = "0.3", features = ["sink"] }
tokio-util   = { version = "0.7", features = ["codec"] }
quinn = { workspace = true }
